fix feat whatsapp: add z-index to container

--- a/public/css/partials/whatsapp.css
+++ b/public/css/partials/whatsapp.css
@@ -2,6 +2,7 @@
   bottom: 5px;
   margin-left: 5px;
   position: fixed;
+  z-index: 100;
   width: fit-content;
   border: 2px solid white;
   border-radius: 10px;
